Ejemplo 5/grpc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-deployment
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      labels:
        app: grpc
    spec:
      containers:
      - name: grpc
        image: <TU_IMAGEN_DE_DOCKER>
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: grpc-service
spec:
  type: LoadBalancer
  selector:
    app: grpc
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
